--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   mongo:
-    image: mongo:6.0
+    image: mongo:latest
+    restart: always
     container_name: mongo
     ports:
       - "27017:27017"
@@ -11,7 +12,7 @@ services:
     volumes:
       - mongo_data:/data/db
     networks:
-      - microservicio_net
+      - microservicio_go_mongo_net
     healthcheck:
       test: [ "CMD-SHELL", "mongosh --quiet --eval 'db.adminCommand(\"ping\")' || exit 1"]
       interval: 10s
@@ -19,20 +20,24 @@ services:
       retries: 5
 
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: microservicio-go
+    restart: always
     ports:
       - "8080:8080"
     depends_on:
-      - mongo
+      mongo:
+        condition: service_healthy
     env_file:
       - .env
     networks:
-      - microservicio_net
+      - microservicio_go_mongo_net
 
 volumes:
   mongo_data:
 
 networks:
-  microservicio_net:
+  microservicio_go_mongo_net:
     driver: bridge
