--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,7 +22,22 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build Docker image (without pushing yet)
+        uses: docker/build-push-action@v5
+        with:
+          load: true  # Esto carga la imagen localmente para que pueda ser escaneada
+          tags: danysoftdev/parcial-go:latest
+ 
+      - name: Scan Docker image with Trivy
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: danysoftdev/parcial-go:latest
+          format: table
+          severity: CRITICAL,HIGH
+          exit-code: 1
+
+      - name: Push Docker image to DockerHub (only if scan passes)
+        if: success()
         uses: docker/build-push-action@v5
         with:
           push: true
