--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,7 @@ services:
       retries: 5
 
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: danysoftdev/parcial-go:latest
     container_name: microservicio-go
     restart: always
     ports:
