Corregido action ejecucion contenedor

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -44,8 +44,19 @@ jobs:
           tags: danysoftdev/parcial-go:latest
 
       - name: Run container for testing
+        if: success()
+        env:
+          MONGO_ROOT_USER: ${{ secrets.MONGO_ROOT_USER }}
+          MONGO_ROOT_PASS: ${{ secrets.MONGO_ROOT_PASS }}
+          MONGO_DB: ${{ secrets.MONGO_DB }}
         run: |
+          echo "MONGO_ROOT_USER=$MONGO_ROOT_USER" > .env
+          echo "MONGO_ROOT_PASS=$MONGO_ROOT_PASS" >> .env
+          echo "MONGO_DB=$MONGO_DB" >> .env
           docker compose -f docker-compose.yml up -d
-          sleep 10  # Espera para asegurar que el contenedor arranque
+          sleep 10
+          curl --fail http://localhost:8080 || (echo "❌ La aplicación no respondió correctamente" && exit 1)
           docker logs microservicio-go
+          docker compose down
+
 
