Agregada publicacion registry github

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -72,3 +72,17 @@ jobs:
         with:
           push: true
           tags: danysoftdev/parcial-go:latest
+
+      - name: 🔐 Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.TOKEN }}
+
+      - name: 🚀 Push Docker image to GitHub Container Registry
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: ghcr.io/danysoftdev/microservicio-go-mongodb:latest
+
