--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -78,7 +78,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.TOKEN }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
 
       - name: 🚀 Push Docker image to GitHub Container Registry
         uses: docker/build-push-action@v5
