Agregada publicacion registry github

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -84,5 +84,5 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ghcr.io/danysoftdev/microservicio-go-mongodb:latest
+          tags: ghcr.io/${{ secrets.REGISTRY_USERNAME }}/microservicio-go-mongodb:latest
 
