Agregada publicacion registry github

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -84,5 +84,8 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ghcr.io/${{ secrets.REGISTRY_USERNAME }}/microservicio-go-mongodb:latest
+          tags: ghcr.io/danysoftdev/microservicio-go-mongodb:latest
+          labels: |
+            org.opencontainers.image.source=https://github.com/danysoftdev/microservicio-go-mongodb
+
 
