--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,9 +5,19 @@ on:
     branches:
       - main  # O tu rama principal
 
+env:
+  REGISTRO: ghcr.io
+  NOMBRE_IMAGEN: ${{ github.repository }}
+
 jobs:
   test-build-push:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
 
     steps:
       - name: 📥 Checkout repository
@@ -31,22 +41,23 @@ jobs:
       - name: 🛠️ Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 🔐 Login to DockerHub
+      - name: 🔐 Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ${{ env.REGISTRO }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 🏗️ Build Docker image (locally)
         uses: docker/build-push-action@v5
         with:
           load: true
-          tags: danysoftdev/parcial-go:latest
+          tags: ${{ env.REGISTRO }}/${{ env.NOMBRE_IMAGEN }}:latest
 
       - name: 🔍 Scan Docker image with Trivy
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: danysoftdev/parcial-go:latest
+          image-ref: ${{ env.REGISTRO }}/${{ env.NOMBRE_IMAGEN }}:latest
           format: table
           severity: CRITICAL,HIGH
           exit-code: 1
@@ -66,26 +77,26 @@ jobs:
           docker compose --profile test --env-file .env up --abort-on-container-exit
           docker compose down
 
-      - name: 🚀 Push Docker image to DockerHub
+      - name: 🚀 Push Docker image to GitHub Container Registry
         uses: docker/build-push-action@v5
         if: success()
         with:
           push: true
-          tags: danysoftdev/parcial-go:latest
-
-      - name: 🔐 Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
-
-      - name: 🚀 Push Docker image to GitHub Container Registry
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          tags: ghcr.io/danysoftdev/microservicio-go-mongodb:latest
+          tags: ${{ env.REGISTRO }}/${{ env.NOMBRE_IMAGEN }}:latest
           labels: |
             org.opencontainers.image.source=https://github.com/danysoftdev/microservicio-go-mongodb
+
+      #- name: 🔐 Login to DockerHub
+      #  uses: docker/login-action@v3
+      #  with:
+      #    username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #    password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      #- name: 🚀 Push Docker image to DockerHub
+      #  uses: docker/build-push-action@v5
+      #  if: success()
+      #  with:
+      #    push: true
+      #    tags: danysoftdev/parcial-go:latest
 
 
