--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   REGISTRO: ghcr.io
+  REPO_NOMBRE_LOWER: danysoftdev/microservicio-go-mongodb
 
 jobs:
   test-build-push:
@@ -51,12 +52,12 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           load: true
-          tags: ${{ env.REGISTRO }}/${{ github.repository.toLowerCase }}:latest
+          tags: ${{ env.REGISTRO }}/${{ env.REPO_NOMBRE_LOWER }}:latest
 
       - name: 🔍 Scan Docker image with Trivy
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: ${{ env.REGISTRO }}/${{ github.repository.toLowerCase }}:latest
+          image-ref: ${{ env.REGISTRO }}/${{ env.REPO_NOMBRE_LOWER }}:latest
           format: table
           severity: CRITICAL,HIGH
           exit-code: 1
@@ -81,7 +82,7 @@ jobs:
         if: success()
         with:
           push: true
-          tags: ${{ env.REGISTRO }}/${{ github.repository.toLowerCase }}:latest
+          tags: ${{ env.REGISTRO }}/${{ env.REPO_NOMBRE_LOWER }}:latest
           labels: |
             org.opencontainers.image.source=https://github.com/danysoftdev/microservicio-go-mongodb
 
