--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,6 +8,7 @@ on:
 env:
   REGISTRO: ghcr.io
   REPO_NOMBRE_LOWER: danysoftdev/microservicio-go-mongodb
+  DOCKERHUB_REPO: danysoftdev/parcial-go
 
 jobs:
   test-build-push:
@@ -48,19 +49,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 🏗️ Build Docker image (locally)
-        uses: docker/build-push-action@v5
+      - name: 🔐 Login to DockerHub
+        uses: docker/login-action@v3
         with:
-          load: true
-          tags: ${{ env.REGISTRO }}/${{ env.REPO_NOMBRE_LOWER }}:latest
-
-      - name: 🔍 Scan Docker image with Trivy
-        uses: aquasecurity/trivy-action@0.28.0
-        with:
-          image-ref: ${{ env.REGISTRO }}/${{ env.REPO_NOMBRE_LOWER }}:latest
-          format: table
-          severity: CRITICAL,HIGH
-          exit-code: 1
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: 🌱 Create .env file for Docker Compose
         run: |
@@ -72,12 +65,6 @@ jobs:
           echo "COLLECTION_NAME=${{ secrets.COLLECTION_NAME }}" >> .env
           echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> .env
 
-      - name: 🔐 Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: 🔁 Run Docker Compose Integration Test
         run: |
           docker compose --profile test --env-file .env up --abort-on-container-exit
@@ -87,22 +74,33 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRO }}/${{ env.REPO_NOMBRE_LOWER }}
+          images: |
+            ${{ env.REGISTRO }}/${{ env.REPO_NOMBRE_LOWER }}
+            ${{ env.DOCKERHUB_REPO }}
 
-      - name: 🚀 Push Docker image to GitHub Container Registry
+      - name: 🏗️ Build Docker image (locally)
         uses: docker/build-push-action@v5
-        if: success()
         with:
-          push: true
-          tags: ${{ env.REGISTRO }}/${{ env.REPO_NOMBRE_LOWER }}:latest
-          labels: |
-            org.opencontainers.image.source=https://github.com/danysoftdev/microservicio-go-mongodb
+          context: .
+          load: true  # build locally (no push)
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
-      #- name: 🚀 Push Docker image to DockerHub
-      #  uses: docker/build-push-action@v5
-      #  if: success()
-      #  with:
-      #    push: true
-      #    tags: danysoftdev/parcial-go:latest
+      - name: 🔍 Scan Docker image with Trivy
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: ${{ env.REGISTRO }}/${{ env.REPO_NOMBRE_LOWER }}:latest
+          format: table
+          severity: CRITICAL,HIGH
+          exit-code: 1
+
+      - name: 🚀 Push Docker image to GHCR and DockerHub
+        uses: docker/build-push-action@v5
+        if: success()  # solo si Trivy no falló
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
 
