--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main  # O tu rama principal
+    tags:
+      - 'v*.*.*'   # Activar si haces git tag v1.0.0, v2.1.3, etc.
 
 env:
   REGISTRO: ghcr.io
@@ -77,6 +79,10 @@ jobs:
           images: |
             ${{ env.REGISTRO }}/${{ env.REPO_NOMBRE_LOWER }}
             ${{ env.DOCKERHUB_REPO }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=ref,event=branch
+            type=raw,value=latest
 
       - name: 🏗️ Build Docker image (locally)
         uses: docker/build-push-action@v5
@@ -102,5 +108,11 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: 📦 Create GitHub Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          generate_release_notes: true
 
 
